# poweramp-start-radio

./: .gitignore  CLAUDE.md  EVALUATION.md  MODES_AND_KNOBS.md  README.md  SETUP.md
android-plugin/: README.md  build.gradle.kts  gradlew.bat  settings.gradle.kts
android-plugin/app/: build.gradle.kts  proguard-rules.pro
android-plugin/app/src/main/: AndroidManifest.xml
android-plugin/app/src/main/cpp/: CMakeLists.txt  math_jni.c  mel_jni.c  soxr_jni.c
android-plugin/app/src/main/cpp/soxr/: cr-core.c  dev32s.h  pffft-wrap.c  pffft.c  soxr-config.h  soxr.c
android-plugin/app/src/main/java/com/powerampstartradio/: MainActivity.kt  PowerampStartRadioApp.kt
android-plugin/app/src/main/java/com/powerampstartradio/benchmark/: BenchmarkActivity.kt
android-plugin/app/src/main/java/com/powerampstartradio/data/: EmbeddingDatabase.kt  EmbeddingIndex.kt  GraphIndex.kt
android-plugin/app/src/main/java/com/powerampstartradio/debug/: DebugMultiSeedReceiver.kt  DebugRadioReceiver.kt
android-plugin/app/src/main/java/com/powerampstartradio/indexing/: AudioDecoder.kt  Clamp3AudioInference.kt  Clamp3TextInference.kt  EmbeddingProcessor.kt  EmbeddingWriter.kt  FlamingoInference.kt  FusionEngine.kt  GraphUpdater.kt  IndexingActivity.kt  IndexingService.kt  IndexingViewModel.kt  LiteRtUtils.kt  MelSpectrogram.kt  MertInference.kt  MuLanInference.kt  MuLanTextInference.kt  NativeMath.kt  NativeMel.kt  NativeResampler.kt  NewTrackDetector.kt  SentencePieceTokenizer.kt
android-plugin/app/src/main/java/com/powerampstartradio/poweramp/: PowerampHelper.kt  PowerampReceiver.kt  QueueManager.kt  TrackMatcher.kt  TrackNormalization.kt
android-plugin/app/src/main/java/com/powerampstartradio/services/: RadioService.kt
android-plugin/app/src/main/java/com/powerampstartradio/similarity/: RecommendationEngine.kt  SimilarityEngine.kt
android-plugin/app/src/main/java/com/powerampstartradio/similarity/algorithms/: DppSelector.kt  DriftEngine.kt  GeoMeanSelector.kt  MmrSelector.kt  PostFilter.kt  RandomWalkSelector.kt  TemperatureSelector.kt
android-plugin/app/src/main/java/com/powerampstartradio/tile/: StartRadioTile.kt
android-plugin/app/src/main/java/com/powerampstartradio/ui/: MainViewModel.kt  ProportionBar.kt  RadioModels.kt  RotaryKnob.kt
android-plugin/app/src/main/java/com/powerampstartradio/ui/theme/: Theme.kt
android-plugin/app/src/main/java/com/powerampstartradio/widget/: StartRadioWidget.kt  StartRadioWidgetReceiver.kt
android-plugin/app/src/main/res/drawable/: ic_launcher_foreground.xml  ic_launcher_monochrome.xml  ic_radio.xml  ic_radio_waves.xml  widget_badge_background.xml
android-plugin/app/src/main/res/layout/: widget_start_radio.xml
android-plugin/app/src/main/res/values/: strings.xml  themes.xml
android-plugin/app/src/main/res/xml/: start_radio_widget_info.xml
android-plugin/scripts/: build-wsl.sh  download-qnn-libs.sh  setup-wsl-android-env.sh
desktop-indexer/: README.md  pyproject.toml
desktop-indexer/scripts/: compare_text_embeddings.py  convert_fp16.py  evaluate_clamp3.py  generate_clamp3_embeddings.py  multi_seed_search.py  replay_multiseed.py  validate_benchmark.py  validate_text_benchmark.py  validate_text_model.py  validate_tflite.py  validate_tflite_clamp3.py
desktop-indexer/src/poweramp_indexer/: __init__.py  audit.py  cli.py  database.py  deep_audit.py  embeddings_clamp3.py  embeddings_clap.py  embeddings_dual.py  embeddings_flamingo.py  embeddings_muq.py  export_litert.py  export_onnx.py  fingerprint.py  fusion.py  graph.py  provenance.py  scanner.py
