[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "poweramp-indexer"
version = "0.1.0"
description = "Desktop indexer for Poweramp Start Radio - generates audio embeddings for music libraries"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "click>=8.1.0",
    "torch>=2.0.0",
    "librosa>=0.10.0",
    "tqdm>=4.65.0",
    "mutagen>=1.46.0",
    "muq>=0.1.0",
    "transformers>=4.47.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
poweramp-indexer = "poweramp_indexer.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/poweramp_indexer"]

[tool.ruff]
line-length = 100
target-version = "py310"
